--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,1 @@
-<div class="auth">
-    <div class="auth-container">
-        <div class="card">
-            <header class="auth-header">
-                <h1 class="auth-title">
-                    <div class="logo">
-                        <span class="l l1"></span>
-                        <span class="l l2"></span>
-                        <span class="l l3"></span>
-                        <span class="l l4"></span>
-                        <span class="l l5"></span>
-                    </div>
-                    Accountancy
-                </h1>
-            </header>
-            <div class="auth-content">
-                <p class="text-xs-center">Please Sign in</p>
-                <form>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input
-                                type="text"
-                                class="form-control underlined"
-                                id="email"
-                                placeholder="Enter your Email"
-                        >
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input
-                                type="password"
-                                class="form-control underlined"
-                                id="password"
-                                placeholder="Enter your Password"
-                        >
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-block btn-primary">Sign In</button>
-                    </div>
-                    <div class="form-group">
-                        <p class="text-muted text-xs-center">
-                            <a href="#">Sign Up</a>
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
