--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <p class="text-xs-center">Войдите для работы</p>
 <form>
     <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">E-mail</label>
         <input
                 type="text"
                 class="form-control underlined"
