--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -49,7 +49,7 @@
     </div>
     <div class="form-group">
         <p class="text-muted text-xs-center">
-            First Time Here? - <a href="#">Registration!</a>
+            First Time Here? - <a [routerLink]="'/registration'">Registration!</a>
         </p>
     </div>
 </form>
