--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -1,35 +1,9 @@
 <div class="main-wrapper">
     <div class="app">
-        <!--HEADER-->
-        <header class="header">
-            <div class="header-block header-block-search">
-                12:12:12
-            </div>
-            <div class="header-block header-block-nav">
-                <ul class="nav-profile">
-                    <li class="profile dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button">
-                                <span class="name">
-                                    Hello, Shalva
-                                </span>
-                        </a>
-                        <div class="dropdown-menu profile-dropdown-menu">
-                            <a class="dropdown-item" href="#"> <i class="fa fa-gear icon"></i>Сделать запись</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#"><i class="fa fa-power-off icon"></i>Выйти</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </header>
-        <!--HEADER-->
-        <!--SIDEBAR-->
+        <hb-header></hb-header>
         <hb-sidebar></hb-sidebar>
-        <!--SIDEBAR-->
-        <!--CONTENT-->
         <article class="content dashboard-page">
             <router-outlet></router-outlet>
         </article>
-        <!--CONTENT-->
     </div>
 </div>
