--- a/src/app/system/history-page/history-page.component.html
+++ b/src/app/system/history-page/history-page.component.html
@@ -1,6 +1,6 @@
 <div class="title-block">
   <h3 class="title">
-    Страница истории <span class="sparkline bar"></span>
+    History Page <span class="sparkline bar"></span>
   </h3>
 </div>
 <section class="section">
@@ -22,15 +22,15 @@
       <div class="card">
         <div class="card-header bordered">
           <div class="header-block">
-            <h3 class="title">Список событий</h3>
+            <h3 class="title">List of events</h3>
           </div>
           <div class="form-inline pull-right m-r-2">
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Поиск...">
+              <input type="email" class="form-control" placeholder="Search...">
             </div>
             <div class="btn-group">
               <button type="button" class="btn btn-secondary dropdown-toggle ">
-                Параметр
+                Options
               </button>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">Action</a>
@@ -47,11 +47,11 @@
             <thead>
             <tr>
               <th>#</th>
-              <th>Сумма</th>
-              <th>Дата</th>
-              <th>Категория</th>
-              <th>Тип</th>
-              <th class="text-lg-center">Действие</th>
+              <th>Score</th>
+              <th>Date</th>
+              <th>Category</th>
+              <th>Type</th>
+              <th class="text-lg-center">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -59,24 +59,24 @@
               <th scope="row">1</th>
               <td>44 444</td>
               <td>12.12.2017</td>
-              <td>Товары</td>
+              <td>Goods</td>
               <td>
-                <span class="label label-danger">Расход</span>
+                <span class="label label-danger">Consumption</span>
               </td>
               <td class="text-lg-center">
-                <a href="#" class="btn btn-primary-outline">Открыть</a>
+                <a href="#" class="btn btn-primary-outline">Open</a>
               </td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>33 333</td>
               <td>12.12.2017</td>
-              <td>Отдых</td>
+              <td>Recreation</td>
               <td>
-                <span class="label label-success">Доход</span>
+                <span class="label label-success">Income</span>
               </td>
               <td class="text-lg-center">
-                <a href="#" class="btn btn-primary-outline">Открыть</a>
+                <a href="#" class="btn btn-primary-outline">Open</a>
               </td>
             </tr>
             </tbody>
@@ -95,17 +95,17 @@
         <button type="button" class="close">
           <span>×</span>
         </button>
-        <h4 class="modal-title">Фильтр</h4>
+        <h4 class="modal-title">Filter</h4>
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label class="control-label" for="period">Выберите период</label>
+          <label class="control-label" for="period">Select a period</label>
           <select class="form-control" id="period">
             <option>тип</option>
           </select>
         </div>
         <div class="form-group">
-          <label class="control-label">Выберите тип события</label>
+          <label class="control-label">Select the type of event</label>
           <div>
             <label>
               <input
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label">Выберите категории</label>
+          <label class="control-label">Select category</label>
           <div>
             <label>
               <input
@@ -129,8 +129,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary">Отмена</button>
-          <button type="button" class="btn btn-primary">Применить</button>
+          <button type="button" class="btn btn-secondary">Cancel</button>
+          <button type="button" class="btn btn-primary">Apply</button>
         </div>
       </div>
     </div>
