--- a/src/app/system/planing-page/planing-page.component.html
+++ b/src/app/system/planing-page/planing-page.component.html
@@ -1,6 +1,6 @@
 <div class="title-block">
   <h3 class="title">
-    Страница планирования <span class="sparkline bar"></span>
+    Planning Page <span class="sparkline bar"></span>
   </h3>
 </div>
 <section class="section">
@@ -9,10 +9,10 @@
       <div class="card">
         <div class="card-header card-header-sm bordered">
           <div class="header-block">
-            <h3 class="title">Расходы</h3>
+            <h3 class="title">Costs</h3>
           </div>
           <h5 class="planning-expenses pull-right">
-            Общий остаток: <span class="text-success">78 999.21 Р</span>
+            Total balance: <span class="text-success">78 999.21 Р</span>
           </h5>
         </div>
         <div class="card-block">
@@ -20,17 +20,17 @@
             <div class="col-xs-6">
               <div class="n-progress">
                 <div class="progress-bar success" style="width: 30%;">
-                  <span>Название категории</span>
+                  <span>Category name</span>
                 </div>
               </div>
             </div>
             <div class="col-xs-6">
               <p>
                 <span class="text-success">300.00</span>
-                из
+                from
                 <span class="text-primary">1000.00</span>
                 |
-                осталось <span class="text-success">700.00</span> (руб.)
+                Left <span class="text-success">700.00</span> (rub.)
               </p>
             </div>
           </div>
@@ -38,17 +38,17 @@
             <div class="col-xs-6">
               <div class="n-progress">
                 <div class="progress-bar warning" style="width: 60%;">
-                  <span>Название категории</span>
+                  <span>Category name</span>
                 </div>
               </div>
             </div>
             <div class="col-xs-6">
               <p>
                 <span class="text-warning">600.00</span>
-                из
+                from
                 <span class="text-primary">1000.00</span>
                 |
-                осталось <span class="text-success">400.00</span> (руб.)
+                Left <span class="text-success">400.00</span> (rub.)
               </p>
             </div>
           </div>
@@ -56,17 +56,17 @@
             <div class="col-xs-6">
               <div class="n-progress">
                 <div class="progress-bar danger" style="width: 100%;">
-                  <span>Название категории</span>
+                  <span>Category name</span>
                 </div>
               </div>
             </div>
             <div class="col-xs-6">
               <p>
                 <span class="text-danger">1200.00</span>
-                из
+                from
                 <span class="text-primary">1000.00</span>
                 |
-                осталось <span class="text-danger">-200.00</span> (руб.)
+                Left <span class="text-danger">-200.00</span> (rub.)
               </p>
             </div>
           </div>
