--- a/src/app/system/records-page/add-event/add-event.component.html
+++ b/src/app/system/records-page/add-event/add-event.component.html
@@ -1,13 +1,13 @@
 <div class="card">
   <div class="card-header bordered">
     <div class="header-block">
-      <h3 class="title">Добавить событие</h3>
+      <h3 class="title">Add event</h3>
     </div>
   </div>
   <div class="card-block">
     <form>
       <div class="form-group">
-        <label class="control-label" for="category">Выберите категорию</label>
+        <label class="control-label" for="category">Choose category</label>
         <select class="form-control" id="category">
           <option>Option one</option>
           <option>Option two</option>
@@ -16,25 +16,25 @@
         </select>
       </div>
       <div class="form-group">
-        <label class="control-label">Выберите тип</label>
+        <label class="control-label">Choose type</label>
         <div>
           <label>
             <input class="radio" name="radios" type="radio">
-            <span>Доход</span>
+            <span>Income</span>
           </label>
         </div>
         <div>
           <label>
             <input class="radio" name="radios" type="radio" checked>
-            <span>Расход</span>
+            <span>Consumption</span>
           </label>
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label" for="amount">Введите сумму</label>
+        <label class="control-label" for="amount">Enter amount</label>
         <input type="number" value="0" id="amount" class="form-control">
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <button type="submit" class="btn btn-primary">Add</button>
     </form>
   </div>
 </div>
