--- a/src/app/system/records-page/adit-category/adit-category.component.html
+++ b/src/app/system/records-page/adit-category/adit-category.component.html
@@ -1,22 +1,22 @@
 <div class="card">
   <div class="card-header bordered">
     <div class="header-block">
-      <h3 class="title">Добавить категорию</h3>
+      <h3 class="title">Add category</h3>
     </div>
   </div>
   <div class="card-block">
     <form>
       <div class="form-group has-error">
-        <label class="control-label" for="category-name">Введите название</label>
+        <label class="control-label" for="category-name">Name</label>
         <input type="text" id="category-name" class="form-control">
-        <span class="form-help-text">Валидация ошибка</span>
+        <span class="form-help-text">Error</span>
       </div>
       <div class="form-group has-success">
-        <label class="control-label" for="category-value">Введите лимит</label>
+        <label class="control-label" for="category-value">Limit</label>
         <input type="number" value="0" id="category-value" class="form-control">
-        <span class="form-help-text">Валидация нет ошибки</span>
+        <span class="form-help-text">success</span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <button type="submit" class="btn btn-primary">Add</button>
     </form>
   </div>
 </div>
